--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,8 +26,19 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Used to pick images and other files to upload them using Vup</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>Used to pick music and other files to upload them using Vup</string>
     <key>NSCameraUsageDescription</key>
     <string>Used to take pictures and scan QR codes used for sharing</string>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+   	<string>fetch</string>
+   	<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
