--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,7 +117,6 @@ dependencies:
   retry: ^3.1.0
   uni_links: ^0.5.1
   device_info_plus: ^3.1.1
-  cast: ^1.1.1
   network_info_plus: ^2.1.2
   tray_manager: ^0.1.2
   bitsdojo_window: ^0.1.1+1
@@ -137,6 +136,9 @@ dependencies:
   random_string: ^2.3.1
   webdav_client: ^1.1.6
   draggable_scrollbar: ^0.1.0
+  lzma: ^1.0.1
+  xml2json: ^5.3.2
+  dart_chromecast: ^0.3.3
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
