--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.8.10+810
+version: 0.9.0+900
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
@@ -51,7 +51,6 @@ dependencies:
     git: https://github.com/redsolver/filesize.git
   timeago: ^3.1.0
   split_view: ^3.1.0
-  context_menus: ^0.1.0+5
   xdg_directories: ^0.2.0
   build_context: ^3.0.0
   file_selector: ^0.8.2+1
@@ -139,6 +138,7 @@ dependencies:
   lzma: ^1.0.1
   xml2json: ^5.3.2
   dart_chromecast: ^0.3.3
+  contextmenu: ^3.0.0
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
