--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   build_context: ^3.0.0
   file_selector: ^0.8.2+1
   file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.0.4+1
+  file_selector_macos: ^0.8.2
   file_selector_windows: ^0.8.2
   filesystem_picker: ^2.0.0-nullsafety.0
   file_picker: ^4.1.3
@@ -109,8 +109,8 @@ dependencies:
       url: https://github.com/redsolver/alfred.git
       ref: range-requests
   connectivity_plus: ^2.0.2
-  share_plus: ^3.0.4
-  package_info_plus: 1.3.0
+  share_plus: ^4.0.3
+  package_info_plus: ^1.4.2
   string_validator: ^0.3.0
   # printing: ^5.6.3
   retry: ^3.1.0
