--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.9.0+900
+version: 0.10.0+1000
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
@@ -41,7 +41,6 @@ dependencies:
   flutter_svg: ^1.0.1
   path_provider: ^2.0.2
   beamer: ^0.14.0
-  fab_circular_menu: ^1.0.2
   path: ^1.8.0
   crypto: ^3.0.1
   convert: ^3.0.0
@@ -50,14 +49,12 @@ dependencies:
   filesize:
     git: https://github.com/redsolver/filesize.git
   timeago: ^3.1.0
-  split_view: ^3.1.0
   xdg_directories: ^0.2.0
   build_context: ^3.0.0
   file_selector: ^0.8.2+1
   file_selector_linux: ^0.0.2+1
   file_selector_macos: ^0.8.2
   file_selector_windows: ^0.8.2
-  filesystem_picker: ^2.0.0-nullsafety.0
   file_picker: ^4.1.3
   # path: /home/redsolver/tmp/flutter_file_picker
   permission_handler: ^9.2.0
@@ -72,7 +69,6 @@ dependencies:
       ref: no_system
   open_settings: ^2.0.1
   flutter_advanced_segment: ^3.0.0
-  circular_menu: ^1.2.2
   # libsodium: ^0.2.0
   # flutter_sodium: ^0.2.0
   selectable_autolink_text: ^2.3.0
@@ -133,7 +129,8 @@ dependencies:
   launch_at_startup: ^0.1.5
   hive_crdt: ^2.0.2
   random_string: ^2.3.1
-  webdav_client: ^1.1.6
+  webdav_client:
+    git: https://github.com/redsolver/webdav_client.git
   draggable_scrollbar: ^0.1.0
   lzma: ^1.0.1
   xml2json: ^5.3.2
