--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.10.1+1001
+version: 0.11.0+1100
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
@@ -113,8 +113,8 @@ dependencies:
   uni_links: ^0.5.1
   device_info_plus: ^3.1.1
   network_info_plus: ^2.1.2
-  tray_manager: ^0.1.2
-  bitsdojo_window: ^0.1.1+1
+  tray_manager: ^0.1.7
+  bitsdojo_window: ^0.1.2
   flutter_background: ^1.1.0
   feedback: ^2.2.1
   flutter_colorpicker: ^1.0.3
@@ -136,6 +136,10 @@ dependencies:
   xml2json: ^5.3.2
   dart_chromecast: ^0.3.3
   contextmenu: ^3.0.0
+  flutter_secure_storage: ^5.0.2
+  local_auth: ^2.1.0
+  dart_discord_rpc:
+    git: https://github.com/alexmercerind/dart_discord_rpc.git
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
@@ -151,6 +155,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
   dart_code_metrics: ^4.1.0
   msix: ^2.8.5
+  flutter_lints: ^2.0.1
 
 dependency_overrides:
   #skynet:
@@ -180,6 +185,7 @@ flutter:
   assets:
     - assets/vscode-material-icon-theme/
     - assets/images/
+    - assets/web/
     - assets/icon/tray_icon.png
     - assets/icon/tray_icon.ico
     - assets/icon/icon.png
