--- a/linux/metadata/app.vup.Vup.desktop
+++ b/linux/metadata/app.vup.Vup.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-
-Name=Vup
-Comment=Vup is an open-source native E2EE cloud storage app for Skynet
-Categories=Utility;Amusement;
-
-Icon=app.vup.Vup
 Exec=vup
 Terminal=false
-StartupWMClass=vup
+Name=Vup Cloud Storage
+Icon=app.vup.Vup
+Categories=FileManager;FileTransfer;Network;Utility;System;FileTools;
+StartupWMClass=Vup
+GenericName=Cloud Storage
+Comment=Private and decentralized cloud storage
+MimeType=x-scheme-handler/vup;
