--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,37 +25,35 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  unicons: ^2.0.1
-  hive: ^2.0.4
-  flutter_spinkit: ^5.0.0
+  cupertino_icons: ^1.0.5
+  unicons: ^2.1.1
+  hive: ^2.2.3
+  flutter_spinkit: ^5.1.0
   clipboard: ^0.1.3
-  ffmpeg_kit_flutter_full: ^4.5.0
+  ffmpeg_kit_flutter_full: ^5.1.0
   simple_observable: ^2.0.0
-  flutter_svg: ^1.0.1
-  path_provider: ^2.0.2
-  beamer: ^0.14.0
-  path: ^1.8.0
-  crypto: ^3.0.1
-  convert: ^3.0.0
-  mime: ^1.0.0
+  flutter_svg: ^2.0.4
+  path_provider: ^2.0.14
+  beamer: ^1.5.3
+  path: ^1.8.3
+  convert: ^3.1.1
+  mime: ^1.0.4
   multi_split_view: 1.12.0
   filesize:
     git: https://github.com/redsolver/filesize.git
-  timeago: ^3.1.0
-  xdg_directories: ^0.2.0
+  timeago: ^3.4.0
+  xdg_directories: ^1.0.0
   build_context: ^3.0.0
-  file_selector: ^0.8.2+1
-  file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.8.2
-  file_selector_windows: ^0.8.2
-  file_picker: ^4.1.3
+  file_selector: ^0.9.2+4
+  file_selector_linux: ^0.9.1+2
+  file_selector_macos: ^0.9.0+7
+  file_selector_windows: ^0.9.1+7
+  file_picker: ^5.2.6
   # path: /home/redsolver/tmp/flutter_file_picker
-  permission_handler: ^9.2.0
-  hive_flutter: ^1.0.0
+  permission_handler: ^10.2.0
+  hive_flutter: ^1.1.0
   # simple_json_mapper: ^2.1.0
   # workmanager: ^0.4.1
-  json_annotation: ^4.0.1
   # android_intent_plus: ^1.0.2
   open_file:
     git:
@@ -64,68 +62,64 @@ dependencies:
   open_settings: ^2.0.1
   flutter_advanced_segment: ^3.0.0
   selectable_autolink_text: ^2.3.0
-  url_launcher: ^6.0.9
-  html: ^0.15.0
+  url_launcher: ^6.1.10
+  html: ^0.15.2
   filesystem_dac:
     # path: ../fs-dac/dac
     git:
       url: https://github.com/redsolver/skyfs.git
       path: dac
-  state_notifier: ^0.7.1
-  flutter_state_notifier: ^0.7.1
+  state_notifier: ^0.7.2+1
+  flutter_state_notifier: ^0.7.3
   universal_platform: ^1.0.0+1
   desktop_drop: ^0.1.2
   uuid: ^3.0.5
   flutter_blurhash: ^0.6.0
   pool: ^1.5.0
-  adaptive_dialog: ^1.1.0
-  intl: ^0.17.0
+  adaptive_dialog: ^1.8.3
+  intl: ^0.18.0
   shimmer: ^2.0.0
-  just_audio: ^0.9.13
+  just_audio: ^0.9.32
   # just_audio_libwinmedia: ^0.0.4
-  audio_video_progress_bar: ^0.10.0
-  animate_icons: ^2.0.0
+  audio_video_progress_bar: ^1.0.1
   qr_flutter: ^4.0.0
-  flutter_local_notifications: ^9.0.0
+  flutter_local_notifications: ^13.0.0
   flutter_highlight: ^0.7.0
   # new_keyboard_shortcuts: ^0.1.4
-  watcher: ^1.0.1
+  watcher: ^1.0.2
   alfred:
     git:
       url: https://github.com/redsolver/alfred.git
-  share_plus: ^4.0.3
-  package_info_plus: ^1.4.2
+  share_plus: ^6.3.1
+  package_info_plus: ^3.0.3
   string_validator: ^0.3.0
   # printing: ^5.6.3
   retry: ^3.1.0
   uni_links: ^0.5.1
-  device_info_plus: ^8.0.0
-  network_info_plus: ^2.1.2
-  tray_manager: ^0.1.7
+  device_info_plus: ^8.1.0
+  network_info_plus: ^3.0.2
+  tray_manager: ^0.2.0
   bitsdojo_window: ^0.1.5
-  flutter_background: ^1.1.0
-  feedback: ^2.2.1
+  flutter_background: ^1.2.0
+  # TODO feedback: ^2.6.0
   flutter_colorpicker: ^1.0.3
   stash: 4.0.1
   stash_hive: 4.0.1
   tuple: ^2.0.0
   subtitle: ^0.1.0-beta.3
-  xml: ^5.3.1
+  xml: ^6.2.2
   mno_streamer: ^0.1.1
   archive2:
     git: https://github.com/redsolver/archive.git
-  launch_at_startup: ^0.1.5
+  launch_at_startup: ^0.2.2
   hive_crdt: ^2.0.2
   random_string: ^2.3.1
-  webdav_client:
-    git: https://github.com/redsolver/webdav_client.git
   draggable_scrollbar: ^0.1.0
-  lzma: ^1.0.1
-  xml2json: ^5.3.2
+  xml2json: ^5.3.6
   dart_chromecast: ^0.3.3
   contextmenu: ^3.0.0
-  flutter_secure_storage: ^6.0.0
-  local_auth: ^2.1.0
+  flutter_secure_storage: ^8.0.0
+  local_auth: ^2.1.6
   dart_discord_rpc:
     git: https://github.com/alexmercerind/dart_discord_rpc.git
   s5_server:
@@ -155,11 +149,12 @@ dev_dependencies:
   ffigen: ^7.2.4
 
 dependency_overrides:
-  #skynet:
-  #  path: ../skynet
   path: 1.8.1
   archive: 3.1.5
   ffi: 2.0.1
+  xml: 6.2.2
+  intl: 0.18.0
+  xdg_directories: 1.0.0
 
 flutter_icons:
   android: true
