--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,4 +17,5 @@ error-chain = "0.12.4"
 flutter_rust_bridge = "1.62.0"
 image = {version = "0.24.4", features = ["webp-encoder"]}
 sha1 = "0.10.5"
+thumbhash = "0.1.0"
 
