Windows: Add Rust support

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -50,6 +50,8 @@ add_subdirectory("runner")
 # them to the application.
 include(flutter/generated_plugins.cmake)
 
+# Everything is set up, we include the CMake build file of our Rust project here.
+include(./rust.cmake)
 
 # === Installation ===
 # Support files are copied into place next to the executable, so that it can
