--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.13.3+1303
+version: 0.14.0+1400
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
@@ -43,7 +43,6 @@ dependencies:
     git: https://github.com/redsolver/filesize.git
   timeago: ^3.4.0
   xdg_directories: ^1.0.0
-  build_context: ^3.0.0
   file_selector: ^0.9.2+4
   file_selector_linux: ^0.9.1+2
   file_selector_macos: ^0.9.0+7
@@ -74,16 +73,15 @@ dependencies:
   universal_platform: ^1.0.0+1
   desktop_drop: ^0.1.2
   uuid: ^3.0.5
-  flutter_blurhash: ^0.6.0
+  flutter_blurhash: ^0.7.0
   pool: ^1.5.0
-  adaptive_dialog: ^1.8.3
   intl: ^0.18.0
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   just_audio: ^0.9.32
   # just_audio_libwinmedia: ^0.0.4
   audio_video_progress_bar: ^1.0.1
   qr_flutter: ^4.0.0
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^14.1.1
   flutter_highlight: ^0.7.0
   # new_keyboard_shortcuts: ^0.1.4
   watcher: ^1.0.2
@@ -92,7 +90,7 @@ dependencies:
       url: https://github.com/redsolver/alfred.git
   share_plus: ^6.3.1
   package_info_plus: ^3.0.3
-  string_validator: ^0.3.0
+  string_validator: ^1.0.0
   # printing: ^5.6.3
   retry: ^3.1.0
   uni_links: ^0.5.1
@@ -109,13 +107,12 @@ dependencies:
   subtitle: ^0.1.0-beta.3
   xml: ^6.2.2
   mno_streamer: 0.1.1
-  archive2:
-    git: https://github.com/redsolver/archive.git
+  archive: ^3.3.7
   launch_at_startup: ^0.2.2
   hive_crdt: ^2.0.2
   random_string: ^2.3.1
   draggable_scrollbar: ^0.1.0
-  xml2json: ^5.3.6
+  xml2json: ^6.1.0
   dart_chromecast: ^0.3.3
   contextmenu: ^3.0.0
   flutter_secure_storage: ^8.0.0
@@ -125,14 +122,14 @@ dependencies:
   s5_server:
     # path: ../s5_server
     git: https://github.com/s5-dev/S5.git
-  lib5:
-    git: https://github.com/s5-dev/lib5.git
+  lib5: ^0.1.0
   ffi: ^2.0.1
-  flutter_rust_bridge: ^1.62.0
+  flutter_rust_bridge: ^1.73.0
   exif: ^3.0.0
-  thumbhash_flutter:
-    git: https://github.com/gahms/thumbhash_flutter.git
+  thumbhash_flutter: ^0.0.1
   yaml: ^3.1.1
+  replicate: ^1.0.0
+  cryptography: ^2.5.0
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
@@ -142,23 +139,28 @@ dev_dependencies:
   #flutter_test:
   #  sdk: flutter
   # simple_json: ^2.1.1
-  build_runner: ^1.10.0
-  hive_generator: ^1.1.0
-  json_serializable: ^4.1.3
-  flutter_launcher_icons: "^0.9.2"
-  dart_code_metrics: ^4.1.0
-  msix: ^2.8.5
+  build_runner: ^2.4.4
+  hive_generator: ^2.0.0
+  json_serializable: ^6.7.0
+  flutter_launcher_icons: ^0.13.1
+  dart_code_metrics: ^5.7.4
+  msix: ^3.13.3
   flutter_lints: ^2.0.1
-  ffigen: ^7.2.4
+  ffigen: ^8.0.2
 
 dependency_overrides:
-  path: 1.8.1
+  # path: 1.8.1
   archive: 3.1.5
   ffi: 2.0.1
-  xml: 6.2.2
+  xml: 6.3.0
   intl: 0.18.0
   xdg_directories: 1.0.0
+  cli_util: 0.4.0
   image: 4.0.8
+  http: 1.0.0
+  # meta: 1.9.0
+  # collection: 1.17.1
+  source_span: ^1.10.0
 
 flutter_icons:
   android: true
