--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,13 +9,11 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+abao = { git = "https://github.com/n0-computer/abao", features = ["group_size_256k"], default_features = false }
 anyhow = "1.0.66"
-bao = {git = "https://github.com/redsolver/bao", branch = "chunk_groups"}
-blake3 = {git = "https://github.com/BLAKE3-team/BLAKE3", branch = "more_guts"}
+blake3 = "1.3.3"
 chacha20poly1305 = "0.10.1"
-error-chain = "0.12.4"
-flutter_rust_bridge = "1.62.0"
+flutter_rust_bridge = "1"
 image = {version = "0.24.4", features = ["webp-encoder"]}
-sha1 = "0.10.5"
 thumbhash = "0.1.0"
 
