--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.14.3+1403
+version: 0.15.0+1500
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
@@ -30,7 +30,7 @@ dependencies:
   hive: ^2.2.3
   flutter_spinkit: ^5.1.0
   clipboard: ^0.1.3
-  ffmpeg_kit_flutter_full: ^5.1.0
+  ffmpeg_kit_flutter_full: ^6.0.2
   simple_observable: ^2.0.0
   flutter_svg: ^2.0.4
   path_provider: ^2.0.14
@@ -42,12 +42,9 @@ dependencies:
   filesize:
     git: https://github.com/redsolver/filesize.git
   timeago: ^3.4.0
-  xdg_directories: ^1.0.0
-  file_selector: ^0.9.2+4
-  file_selector_linux: ^0.9.1+2
-  file_selector_macos: ^0.9.0+7
-  file_selector_windows: ^0.9.1+7
-  file_picker: ^5.2.6
+  xdg_directories: ^1.0.3
+  file_selector: ^1.0.1
+  file_picker: ^5.3.4
   # path: /home/redsolver/tmp/flutter_file_picker
   permission_handler: ^10.2.0
   hive_flutter: ^1.1.0
@@ -71,31 +68,27 @@ dependencies:
   state_notifier: ^0.7.2+1
   flutter_state_notifier: ^0.7.3
   universal_platform: ^1.0.0+1
-  desktop_drop: ^0.1.2
+  desktop_drop: ^0.4.3
   uuid: ^3.0.5
   flutter_blurhash: ^0.7.0
   pool: ^1.5.0
   intl: ^0.18.0
   shimmer: ^3.0.0
-  just_audio: ^0.9.32
-  # just_audio_libwinmedia: ^0.0.4
-  audio_video_progress_bar: ^1.0.1
   qr_flutter: ^4.0.0
-  flutter_local_notifications: ^14.1.1
+  flutter_local_notifications: ^15.1.1
   flutter_highlight: ^0.7.0
-  # new_keyboard_shortcuts: ^0.1.4
   watcher: ^1.0.2
   alfred:
     git:
       url: https://github.com/redsolver/alfred.git
-  share_plus: ^6.3.1
-  package_info_plus: ^3.0.3
+  share_plus: ^7.1.0
+  package_info_plus: ^4.1.0
   string_validator: ^1.0.0
   # printing: ^5.6.3
   retry: ^3.1.0
   uni_links: ^0.5.1
-  device_info_plus: ^8.1.0
-  network_info_plus: ^3.0.2
+  device_info_plus: ^9.0.3
+  network_info_plus: ^4.0.2
   tray_manager: ^0.2.0
   bitsdojo_window: ^0.1.5
   flutter_background: ^1.2.0
@@ -107,7 +100,7 @@ dependencies:
   subtitle: ^0.1.0-beta.3
   xml: ^6.2.2
   mno_streamer: 0.1.1
-  archive: ^3.3.7
+  archive: ^3.3.8
   launch_at_startup: ^0.2.2
   hive_crdt: ^2.0.2
   random_string: ^2.3.1
@@ -115,7 +108,7 @@ dependencies:
   xml2json: ^6.1.0
   dart_chromecast: ^0.3.3
   contextmenu: ^3.0.0
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
   local_auth: ^2.1.6
   dart_discord_rpc:
     git: https://github.com/alexmercerind/dart_discord_rpc.git
@@ -130,6 +123,9 @@ dependencies:
   yaml: ^3.1.1
   replicate: ^1.0.0
   cryptography: ^2.5.0
+  media_kit: ^1.1.7
+  media_kit_video: ^1.1.8
+  media_kit_libs_video: ^1.0.1
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
@@ -143,29 +139,26 @@ dev_dependencies:
   hive_generator: ^2.0.0
   json_serializable: ^6.7.0
   flutter_launcher_icons: ^0.13.1
-  dart_code_metrics: ^5.7.4
   msix: ^3.13.3
   flutter_lints: ^2.0.1
-  ffigen: ^8.0.2
+  ffigen: ^9.0.0
 
 dependency_overrides:
   # path: 1.8.1
-  archive: 3.1.5
-  ffi: 2.0.1
+  archive: 3.3.8
+  ffi: 2.1.0
   xml: 6.3.0
-  intl: 0.18.0
-  xdg_directories: 1.0.0
+  intl: 0.18.1
+  xdg_directories: 1.0.3
   cli_util: 0.4.0
   image: 4.0.8
   http: 1.0.0
+  win32: 5.0.7
   # meta: 1.9.0
   # collection: 1.17.1
   source_span: ^1.10.0
-  flutter_secure_storage_linux:
-    git:
-      url: https://github.com/Mino5531/flutter_secure_storage.git
-      ref: develop
-      path: flutter_secure_storage_linux
+  mno_shared:
+    git: https://github.com/redsolver/mno_shared_dart.git
 
 flutter_icons:
   android: true
