--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,6 @@ dependencies:
   device_info_plus: ^9.0.3
   network_info_plus: ^4.0.2
   tray_manager: ^0.2.0
-  bitsdojo_window: ^0.1.5
   flutter_background: ^1.2.0
   # TODO feedback: ^2.6.0
   flutter_colorpicker: ^1.0.3
@@ -126,6 +125,7 @@ dependencies:
   media_kit: ^1.1.7
   media_kit_video: ^1.1.8
   media_kit_libs_video: ^1.0.1
+  window_manager: ^0.3.6
 
   # flutter_acrylic: ^0.1.0
   # explo_capture: ^0.1.0+2
